# XMem

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  MIGRATION_PLAN.md  README.md  apply_optimization.py  benchmark_retrieval.py  benchmark_retrieval_baseline.py  benchmark_retrieval_concurrent.py  check_config.py  clean_test_data.py  clear_has_event.py  error.json  pyproject.toml  server.py  setup.py  test_aws.py  test_ingest.py  test_retrieval.py  test_weaver_perf.py  testcodeagent.py  verify_weaver_batch.py
.github/: CODEOWNERS  labeler.yml
.github/workflows/: api-schema-diff.yml  ci.yml  danger.yml  deploy-aws.yml  deploy-staging.yml  labeler.yml  promote-to-production.yml  security-scan.yml  tests.yml
.jules/: bolt.md
LongMemEval/: .gitignore
LongMemEval/data/: longmemeval_subset_10pc.json
admin/: app.js  index.html  style.css
benchmarks/: __init__.py
benchmarks/dataset/: locomo_10%testing.json
benchmarks/longmemeval/: __init__.py  add.py  create_subset.py  evaluate.py  merge_results.py  search.py
benchmarks/longmemeval/results/: add_results_longmemeval_oracle_22-100.json  add_results_longmemeval_subset_10pc_49-60.json  eval_results_longmemeval_oracle_1-100.json  eval_results_longmemeval_subset_10pc_1-60.json  hypotheses_longmemeval_oracle_1-100.jsonl  hypotheses_longmemeval_subset_10pc_1-60.jsonl  interactive.py  search_results_longmemeval_oracle_1-100.json  search_results_longmemeval_subset_10pc_1-60.json
benchmarks/metrics/: __init__.py  llm_judge.py  utils.py
benchmarks/results/: add_results.json  add_results_cm0.json  add_results_jg.json  eval_results.json  eval_results_cm0.json  eval_results_jg.json  search_results.json  search_results_cm0.json  search_results_jg.json
benchmarks/runners/: __init__.py  add.py  benchmark_prompts.py  benchmark_registry.py  benchmark_registry_mocked.py  evaluate.py  search.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: benchmarks.md  configuration.md
frontend/: index.html  server.py
scripts/: benchmark_v2_ingest.py
src/: jobs.py
src/agents/: __init__.py  base.py  classifier.py  code.py  image.py  judge.py  profiler.py  snippet.py  summarizer.py  temporal.py
src/api/: app.py  chat_share.py  dependencies.py  ingestion_coordinator.py  middleware.py  schemas.py
src/api/routes/: __init__.py  admin.py  api_keys.py  auth.py  code.py  enterprise.py  health.py  jobs.py  memory.py  memory_graph.py  scanner.py  telemetry.py
src/config/: __init__.py  analytics.py  constants.py  effort.py  logging.py  metrics.py  monitoring.py  settings.py
src/database/: __init__.py  api_key_store.py  control_plane_store.py  models.py  project_store.py  user_store.py
src/enterprise/: __init__.py  annotation_service.py  chat_orchestrator.py  memory_service.py  schemas.py
src/graph/: __init__.py  code_graph_client.py  code_schema.py  neo4j_client.py  schema.py
src/installer/: welcome.py
src/jobs/: __init__.py  durable.py
src/models/: __init__.py  base.py  bedrock.py  claude.py  gemini.py  ollama.py  openai.py  openrouter.py  registry.py
src/pipelines/: __init__.py  code_retrieval.py  ingest.py  retrieval.py  weaver.py
src/prompts/: classifier.py  classifier_keywords.py  code.py  image.py  judge.py  profiler.py  profiler_topics.py  retrieval.py  snippet.py  summarizer.py  temporal.py
src/prompts/examples/: classification.py  judge.py  profile.py  retrieval.py  summary.py  temporal.py
src/scanner/: __init__.py  ast_parser.py  code_store.py  enricher.py  git_ops.py  indexer.py  runner.py
src/scanner_v1/: __init__.py  ast_parser.py  embedder.py  enricher.py  git_ops.py  indexer.py  runner.py  schemas.py  store.py
src/schemas/: classification.py  code.py  events.py  image.py  judge.py  profile.py  retrieval.py  summary.py  weaver.py
src/storage/: __init__.py  base.py  factory.py  local.py  pinecone.py  team_annotation_store.py
src/utils/: __init__.py  embeddings.py  exceptions.py  json_parse.py  retry.py  text.py  transcripts.py
tests/: conftest.py  test_api_key_store.py  test_api_memory_scrape.py  test_chat_share_extraction.py  test_claude_code_transcript.py  test_deterministic_memory_layer.py  test_durable_jobs.py  test_enterprise_chat.py  test_exception.py  test_scanner_start_scan_auth.py  test_text.py
tests/api/: test_dependencies_and_routes.py  test_durable_jobs_routes.py  test_memory_search_routes.py  test_memory_versioning.py
tests/e2e/: test_memory_flow.py
tests/integration/: test_code_retrieval_pipeline.py  test_ingest_pipeline.py  test_retrieval_pipeline.py  test_weaver_pipeline.py
tests/unit/: test_agents.py  test_control_plane_store.py  test_database_stores.py  test_schemas.py  test_utils.py
tests/unit/agents/: test_classifier.py  test_image.py  test_judge.py  test_profiler.py  test_summarizer.py  test_temporal.py
tests/unit/models/: test_registry.py
tests/unit/pipelines/: test_ingest_parallel.py  test_ingest_pipeline.py  test_weaver.py
tests/unit/prompts/: test_classifier.py  test_classifier_prompt.py
tests/unit/scanner/: test_git_ops.py
tests/unit/storage/: test_pinecone.py
tests/unit/utils/: test_embeddings.py  test_text.py
