[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Xmem"
version = "0.1.0"
description = "Universal unified memory system for AI agents"
authors = [
    {name = "Vedant Mahajan", email = "xmemlabs@gmail.com"},
    {name = "Ishaan Gupta", email = "xmemlabs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.9",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-aws>=0.2.0",
    "boto3>=1.34.0",
    "langgraph>=0.0.10",
    "pinecone>=3.0.0",
    "google-genai>=1.2.0",
    "pymongo>=4.6.0",
    "neo4j>=5.14.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.42.0",
    "python-jose[cryptography]>=3.3.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
asyncio_mode = "auto"
